--- a/view-page-source.com-cleaningtemplate.webflow.io_.html
+++ b/view-page-source.com-cleaningtemplate.webflow.io_.html
@@ -6,7 +6,7 @@
 data-wf-status="1">
 <head>
   <meta charset="utf-8">
-  <title>Cleaning X - Webflow Ecommerce website template</title>
+  <title>MinuteMaids - Professional Cleaning Service For Your Home & Office</title>
   <meta content=
   "Presenting Cleaning X, our cleaning service Webflow Template designed for modern cleaning maids & house cleaning businesses. If you want your cleaning service to stand out, this is the template for you."
   name="description">
