Update and rename view-page-source.com-cleaningtemplate.webflow.io_.html to index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ data-wf-status="1">
         <div class="header-content-wrapper">
           <div class="header-left-side">
             <a href="/" aria-current="page" class=
-            "header-logo-link left w-nav-brand w--current"><img src="https://assets.website-files.com/61f167b25917d67e92bc753b/61f180f2ce1e43978d49e075_logo-cleaning-webflow-ecommerce-template.svg"
+            "header-logo-link left w-nav-brand w--current"><img src="https://raw.githubusercontent.com/mavumo/minutemaids/main/minutemaids.svg"
             alt="Cleaning X Webflow Ecommerce Template - Logo"
             class="header-logo"></a>
             <nav role="navigation" class=
